# db-query

./: .gitignore  CLAUDE.md  DEBUG_GUIDE.md  README.md  run-and-test.ps1  run-tests.ps1  start-backend.ps1  test-api-simple.ps1  test-api.ps1  test-db-with-logs.ps1
.claude/: settings.local.json
.claude/commands/: code-review.md
.claude/reviews/review-20250121-frontend/: report.md
.claude/reviews/review-20251221-120916-backend/: report.md
.specify/context/: cursor-agent.md
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs  types.rs
backend/src/api/: databases.rs  mod.rs  queries.rs
backend/src/db/: mod.rs  sqlite.rs
backend/src/models/: database.rs  mod.rs  natural_language.rs  query.rs  request.rs  schema.rs
backend/src/services/: database_service.rs  llm_service.rs  mod.rs  query_executor.rs  schema_service.rs  sql_validator.rs
backend/src/utils/: mod.rs  validation.rs
backend/tests/: integration_test.rs
fixtures/: test.rest
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/api/: client.ts  database.ts  natural_language.ts  query.ts  (+1 more)
specs/: instructions.md
specs/1-database-query-tool/: data-model.md  plan.md  quickstart.md  research.md  spec-cn.md  spec.md  tasks.md
(+37 files in other folders)
