[package]
name = "db-query-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }

# Database drivers
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# SQL parsing
sqlparser = "0.40"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP middleware
tower-http = { version = "0.6", features = ["cors"] }

# Configuration
dotenv = "0.15"

# Error handling
anyhow = "1.0"

# HTTP client for LLM API
reqwest = { version = "0.12", features = ["json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
